--- a/app/index.html
+++ b/app/index.html
@@ -15,33 +15,33 @@
         <div>
             <div>
                 <form ng-submit="addUser(email, forename, surname)">
-                    Email: <input type="text" ng-model="email" />
-                    Forename: <input type="text" ng-model="forename" />
-                    Surname: <input type="text" ng-model="surname" />
-                    <input type="submit" id="submit" value="Add New User" />
+                    Email: <input type="text" ng-model="email" placeholder="Email" />
+                    Forename: <input type="text" ng-model="forename" placeholder="Forename" />
+                    Surname: <input type="text" ng-model="surname" placeholder="Surname" />
+                    <input type="submit" id="submit" value="Add New User" class="styled-text"/>
                 </form>
                 <div class="between-space"></div>
                 <table>
                     <tr>
                         <!-- <th>ID</th> -->
-                        <th>EMAIL</th>
-                        <th>FORENAME</th>
-                        <th>SURNAME</th>
+                        <th>Email</th>
+                        <th>Forename</th>
+                        <th>Surname</th>
                         <!-- <th>CREATED</th> -->
                         <th>Delete</th>
                         <th>Edit</th>
                     </tr>
-                    <tr ng-repeat="user in users">
+                    <tr ng-repeat="user in users | orderBy:'-date'">
                         <!-- <td>{{user._id}}</td> -->
-                        <td>{{user.email}}</td>
-                        <td>{{user.forename}}</td>
-                        <td>{{user.surname}}</td>
+                        <td ><span class="styled-text">{{user.email}}</span></td>
+                        <td ><span class="styled-text">{{user.forename}}</span></td>
+                        <td ><span class="styled-text">{{user.surname}}</span></td>
                         <!-- <td>{{user.date}}</td> -->
                         <td>
-                            <button>Delete</button>
+                            <button class="styled-text" ng-click="deleteUser(user)">Delete</button>
                         </td>
                         <td>
-                            <button>Edit</button>
+                            <button class="styled-text">Edit</button>
                         </td>
                     </tr>
                 </table>
